force-app/main/default/objects/ABHFL_Auto_Closure__mdt/ABHFL_Auto_Closure__mdt.object-meta.xml
<CustomObject>
    <label>ABHFL Auto Closure</label>
    <pluralLabel>ABHFL Auto Closures</pluralLabel>
</CustomObject>