force-app/main/default/objects/ABHFL_Auto_Closure__mdt/fields/CCC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CCC_External_Id__c</fullName>
    <label>CCC External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>