force-app/main/default/objects/ABHFL_Auto_Closure__mdt/fields/Duration_Of_Closure__c.field-meta.xml
<CustomField>
    <fullName>Duration_Of_Closure__c</fullName>
    <label>Duration Of Closure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>