force-app/main/default/objects/ABHFL_Auto_Closure__mdt/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <label>SMS Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>