force-app/main/default/objects/ABHFL_Auto_Closure__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Progress with Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with CS</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>In Progress with Repayment Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with Retention</fullName>
            </value>
            <value>
                <fullName>In Progress with TDS</fullName>
            </value>
            <value>
                <fullName>In Progress with TDS Ops</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>In Progress with ABFL CIBIL</fullName>
            </value>
            <value>
                <fullName>In Progress with Closure Desk</fullName>
            </value>
            <value>
                <fullName>In Progress with Disbursement Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with Outbound</fullName>
            </value>
            <value>
                <fullName>In Progress with Partner</fullName>
            </value>
            <value>
                <fullName>In Progress with Receipts</fullName>
            </value>
            <value>
                <fullName>In Progress with Receipt Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with Sales</fullName>
            </value>
            <value>
                <fullName>In Progress with Servicing Desk</fullName>
            </value>
            <value>
                <fullName>In Progress with Servicing Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with SRE Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with GRT</fullName>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
            <value>
                <fullName>In Progress with Branch Ops</fullName>
            </value>
            <value>
                <fullName>In Progress with Revenue &amp; Retention</fullName>
            </value>
            <value>
                <fullName>Pending for Business / Credit Approval</fullName>
            </value>
            <value>
                <fullName>Pending for ROI Approval</fullName>
            </value>
            <value>
                <fullName>IO Recommendation</fullName>
            </value>
            <value>
                <fullName>IO Feedback</fullName>
            </value>
            <value>
                <fullName>Unresolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>