force-app/main/default/objects/ABHFL_Auto_Closure__mdt/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>TextArea</type>
</CustomField>