force-app/main/default/objects/ABHFL_Auto_Closure__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NamespacePrefix</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CCC_External_Id__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Duration_Of_Closure__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>